2014-03-11  Juanma Barranquero  <lekktu@gmail.com>

	* frameset.el: Separate options for reusing frames and cleaning up.
	(frameset--reuse-list): Remove definition; declare.
	(frameset--action-map): Declare.
	(frameset--find-frame-if): Doc fix.
	(frameset--restore-frame): Cache frame action.
	(frameset-restore): New keyword arg CLEANUP-FRAMES, allows to select
	how to clean up the frame list after restoring.  Remove cleaning
	options from REUSE-FRAMES.  Change all keyword values to symbols.
	(frameset--jump-to-register): Simplify by using CLEANUP-FRAMES.

	* desktop.el (desktop-restore-forces-onscreen)
	(desktop-restore-reuses-frames): Use non-keyword values.
	(desktop-restore-frameset): Use CLEANUP-FRAMES arg of frameset-restore.

2014-03-10  Glenn Morris  <rgm@gnu.org>

	* files.el (find-file): Doc fix: update info node name.

	* emacs-lisp/advice.el (ad-add-advice, defadvice):
	Doc fix: remove references to deleted info nodes.

2014-03-10  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-sh.el (tramp-open-connection-setup-interactive-shell):
	Do not add `nil' to the environment, when there's no remote `locale'.
	(tramp-find-inline-encoding): Check, that the remote host has
	installed perl, before sending scripts.

2014-03-10  Leo Liu  <sdl.web@gmail.com>

	* emacs-lisp/eldoc.el (eldoc-minibuffer-message): Clear
	eldoc-last-message.  (Bug#16920)

2014-03-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* desktop.el (desktop-create-buffer): Don't run activate-mark-hook
	(bug#14430).

2014-03-09  Juri Linkov  <juri@jurta.org>

	* ansi-color.el (ansi-color-names-vector): Copy default colors
	from `xterm-standard-colors' that look well on the default white
	background (and also on the black background) to avoid illegible
	color combinations like yellow-on-white and white-on-white.
	http://lists.gnu.org/archive/html/emacs-devel/2014-02/msg00157.html

2014-03-08  Juanma Barranquero  <lekktu@gmail.com>
